<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/moralback" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/banner_container">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#fcf9f9" android:gravity="center" android:background="@drawable/btn" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="ঢাকা  বিভাগ ও এর জেলা সমুহ" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt1" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story1" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt2" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story2" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt3" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story3" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt4" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story4" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt5" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story5" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt6" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story6" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt7" android:background="@drawable/roundbutton" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story7" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt8" android:background="@drawable/roundbutton" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story8" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt9" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story9" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt10" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story10" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt11" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story11" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt12" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story12" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt13" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story13" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true"/>
</RelativeLayout>
