<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/moralback" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#fdfafb" android:gravity="center" android:background="@drawable/btn" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="চট্টগ্রাম  বিভাগ ও এর জেলা সমুহ" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt14" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story14" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt15" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story15" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt64" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story64" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt16" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story16" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt17" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story17" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt18" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story18" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt19" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story19" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt20" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story20" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt21" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story21" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt22" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story22" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt23" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story23" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
