<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/after_noon" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/banner_container">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#fcf9f9" android:gravity="center" android:background="@drawable/btn" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="খুলনা বিভাগ ও এর জেলা সমুহ" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt32" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story32" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt33" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story33" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt34" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story34" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt35" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story35" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt36" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story36" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt37" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story37" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt38" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story38" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt39" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story39" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt40" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story40" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt41" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story41" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true"/>
</RelativeLayout>
