<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/after_noon">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#fcf9f9" android:gravity="center" android:background="@drawable/btn" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="রংপুর বিভাগ ও এর জেলা সমুহ" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt52" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story52" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt53" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story53" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt54" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story54" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt55" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story55" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt56" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story56" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt57" android:background="@drawable/roundbutton" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story57" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt58" android:background="@drawable/roundbutton" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story58" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt59" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story59" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
