<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/after_noon" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#fcf9f9" android:gravity="center" android:background="@drawable/btn" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="রাজশাহী বিভাগ ও এর জেলা সমুহ" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt24" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story24" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt25" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story25" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt26" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story26" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt27" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story27" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt28" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story28" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt29" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story29" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt30" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story30" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#FFFFFF" android:id="@+id/bt31" android:background="@drawable/roundbutton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/story31" android:drawableLeft="@drawable/maps" android:drawableRight="@drawable/maps1" android:textAllCaps="false"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/banner_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
